# reddit_scrapper

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  README.ru.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
src/: config.py  db.py  main.py
src/publisher/: telegram.py
src/scraper/: media.py  reddit.py
tests/: test_db.py  test_publisher.py  test_scraper.py
tests/fixtures/: reddit_top.json
